@@ -27,6 +27,7 @@
 	moved default example directory to share/sqlrelay/examples
 	sqlrelay.conf example is installed under example directory now
 	Python DB -> Python DB-API in the docs
+	moved private members and support classes into C++ API's .cpp files
 
 0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
 	added informix connection module
